@@ -16,6 +16,7 @@ MPlayer (1.0)
     * support adding noise at output resolution with -vo gl:noise-strength=8
     * experimental support for PGS (BluRay-compatible), DVB and XSUB subtitles.
     * experimental af_cmdline slave command to change e.g. audio equalizer options at runtime.
+    * vo x11: don't hide or show cursor any more if attached to an existing window (-wid)
 
     MEncoder:
     * -force-key-frames option to set explicit seek points.
